# ddr

./: .gitignore  .pre-commit-config.yaml  .pyiceberg.yaml  404.html  CLAUDE.md  CONTRIBUTING.md  NOTICE.txt  README.md  REFACTORING_SUMMARY.md  TEST_SUMMARY.md  _0.1.1-ddr_jrb-merit_conus_v6.18_snow_epoch_4_mb_0.pt  index.html  mkdocs.yml  pyproject.toml  shoutout.md  test_refactor.py  zensical.toml
benchmarks/: NOTICE.txt  README.md  pyproject.toml
benchmarks/config/: benchmark.yaml  example_benchmark.yaml
benchmarks/config/hydra/: settings.yaml
benchmarks/scripts/: benchmark.py
benchmarks/src/ddr_benchmarks/: __init__.py  __main__.py  benchmark.py  diffroute_adapter.py
benchmarks/src/ddr_benchmarks/configs/: __init__.py  benchmark.py
benchmarks/src/ddr_benchmarks/validation/: benchmark.py  diffroute.py
benchmarks/tests/: test_diffroute.py
blog/: index.html
config/: evaluation_config.yaml  example_config.yaml  merit_geometry_config.yaml  train_config.yaml  training_config.yaml
data/: training_hydrolocations.csv
docs/: config_reference.md  datasets.md  equations.md  future_work.md  gpu.md  index.md  leakance.md  node_processor.md  references.md  reservoir.md  startup.md
engine/: Gauges.py  README.md  adjacency.py  build_gage_adjacency.py  build_warehouse.py  index.html  pyproject.toml
examples/: README.md  custom_geodataset.ipynb
ngen_resources/: README.md
quickstart/: index.html
reference/: index.html
references/: README.md  build_reservoir_params.py
scripts/: bmi.py  debug.ipynb  eval.py  gen_config_docs.py  geometry_predictor.py  (+10 more)
(+233 files in other folders)
