[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/ddr_benchmarks"]

[project]
name = "ddr-benchmarks"
version = "0.1.0"
description = "Benchmarking tools for DDR routing model"
requires-python = ">=3.11"
dependencies = [
    "ddr[cuda]",
    "xarray",
    "netcdf4",
    "diffroute",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
